# paperbot

./: .gitignore  Cargo.toml
src/: get_paper_info.rs  main.rs
src/handler/: channel_state.rs  mod.rs  paper_info.rs
