[package]
name = "papertest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version="1.0.95", features=["backtrace"]}
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
once_cell = "1.20.2"
poise = "0.6.1"
regex = "1.11.1"
reqwest = {version="0.12.12", features=["json"]}
serde = {version="1.0.217", features=["derive"]}
serde-xml-rs = "0.6.0"
serde_json = "1.0.138"
serenity = "0.12.4"
tokio = { version="1.43.0", features=["full"] }
translators = { version = "0.1.5", features = ["google", "tokio-async"] }
urlencoding = "2.1.3"
